--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ jdk: oraclejdk8
 os:
   - linux
   - osx
+matrix:
+  include:
+  - os: osx
+  - os: linux
+    jdk: oraclejdk8
 cache:
   directories:
     - $HOME/.ivy2/cache
