--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ before_cache:
   - find $HOME/.ivy2/cache -name "ivydata-*.properties" -print -delete
   - find $HOME/.sbt        -name "*.lock"               -print -delete
 script:
+  - sbt compileNative
   - sbt +test
