--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,13 @@
-*.class
-*.log
-
-# sbt specific
-.cache
-.history
-.lib/
-dist/*
 target/
-lib_managed/
-src_managed/
-project/boot/
-project/plugins/project/
-
-.idea
-
+.bigquery
+.bloop
+.bsp
+.metals
+appengine/testing.yaml
+appengine/production.yaml
+local.conf
+local.sbt
+metals.sbt
+.vscode
 src/main/resources/darwin/
 src/main/resources/linux-x86-64/
-
-.bloop
-.metals
